# Drug-Discovery-using-ChEMBL-API

./: .gitignore  Dockerfile  Drug_Discovery_using_ChEMBL_API.ipynb  PITCH_DECK.md  Procfile  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml  pages.yml
config/: .env.example  logging.conf
src/chembldiscovery/: __init__.py
src/chembldiscovery/api/: __init__.py  main.py
src/chembldiscovery/core/: __init__.py  client.py
src/chembldiscovery/models/: __init__.py
src/chembldiscovery/services/: __init__.py  drug_service.py  generator.py  screening.py  target_service.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_models.py
