[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chembldiscovery"
version = "1.0.0"
description = "Pharmaceutical Research Platform - Drug Discovery using ChEMBL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ChEMBL Discovery Team", email = "team@chembldiscovery.io"}
]
keywords = ["cheminformatics", "drug-discovery", "chembl", "pharmaceutical", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "chembl-webresource-client>=0.10.9",
    "rdkit>=2025.3.6",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
server = [
    "gunicorn>=23.0.0",
    "hypercorn>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/chembldiscovery/chembldiscovery"
Documentation = "https://chembldiscovery.readthedocs.io"
Repository = "https://github.com/chembldiscovery/chembldiscovery"
Issues = "https://github.com/chembldiscovery/chembldiscovery/issues"

[project.scripts]
chembldiscovery = "chembldiscovery.__:main__"
chembl-api = "chembldiscovery.api.__:main__:main"

[tool.setuptools]
packages = ["chembldiscovery", "chembldiscovery.api", "chembldiscovery.core", "chembldiscovery.models", "chembldiscovery.services"]

[tool.setuptools.package-data]
chembldiscovery = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = ["E501", "N802", "N803"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"